# crabeye

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml  readme.md
.github/workflows/: rust.yml
.sqlx/: query-5ac4cc86b3401453e55a0aff65ae8a49cba2eda555d24f66cbb997a6b39efc57.json  query-653eb3a06303d885c6b5523785c258a714d43d646f4ee7e9fe8c63d7532cd512.json  query-74528d5a003ea98524bcd5f8ff5b8328783f1907b80034d46f46db790513211e.json  query-ad4b4da8aa665f2b8b0543cb645de52f5cb43b1caaddeecc7c479fdc28718809.json  query-bb8bb08177ae4bbeb6fc63eb3ddb1e76652805e5b89f13ffbfdb031f69a84433.json  query-f1f745d51c945b152e10e936aabb83dbdad28646df1b9e731e7a9f5ba2da6fd9.json
backend/: .env.example  .gitignore  Cargo.toml  build.rs  docker-compose.yml  ranal_log.txt  readme.md
backend/.sqlx/: query-2478a742e79a27b4eb3483c5b1b4221fdde120925b0194eb5c7f8503e659986e.json  query-515682ac5e1dbfbb2b3cb1f4ec024bbc16ea77564da7272e7ab83ebb6a905fae.json  query-b4bfdd2f4f597df480c305c28a86b7b3b4df50f4c9feaff6f446394a7c2d0bc5.json  query-b836ccb35fc230b6934198e1239556e05f1117fb70af8db60bb8bea64504a710.json  query-c217e5d460edece828f791e069fbfc4d8b7963c63f106ea66f6b5375741dbcaa.json  query-d083072365e96b61c33435f9bd4b3d5dd9b128d1e9658083e69891e8b8df5b30.json  query-f7ddf5d9713e9a6a3e320d811e8a7baeada6d27256cfb8124489aa06b5fe419d.json
backend/migrations/: 20250323121106_delete.sql  20251117165301_delete.sql  20251117165302_init.sql  20251117165303_add_indexes.sql  20251117165304_constraints.sql  20251117165305_optimize_indexes.sql  20260412000001_init.sql  20260412000005_issue_event_history_indexes.sql  20260412000006_issue_labels_history_indexes.sql
backend/misc/: analyzed_queries.sql  drop_indexes.sql  notes.md  selects.sql  testing_selects.sql  tests.sql
backend/src/: commands.rs  config.rs  lib.rs  main.rs  misc.rs  pagination.rs  progress.rs
backend/src/api/: app_state.rs  docs.rs  issues.rs  mod.rs  review.rs  teams.rs
backend/src/db/: inserts.rs  misc.rs  mod.rs  queries.rs
backend/src/db/model/: issue.rs  mod.rs  paginated_response.rs  pr_event.rs  responses.rs  team_member.rs
backend/src/git/: git.rs  github.rs  mod.rs
backend/src/git/github/: fetch.rs  mod.rs  parse.rs  rate_limit.rs
backend/src/monitoring/: mod.rs  state_tracker.rs
dockers/grafana/: docker-compose.yml
dockers/postgres/: docker-compose.yml
frontend/: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PR_ANALYTICS.md  aide-axum-open-api-for-ranal.json  eslint.config.js  package-lock.json  package.json  readme.md  tsconfig.json
frontend/src/: main.js
frontend/src/Layout/Components/: Header.vue  Sidebar.vue
frontend/src/assets/: base.scss
frontend/src/assets/layout/generic/: _generic-base.scss
frontend/src/components/: FilterBar.vue  PrStateTimeline.vue
frontend/src/components/Charts/: BarChartComponent.vue  TreemapChartComponent.vue
frontend/src/pages/: FIlterDemo.vue  PrAnalytics.vue  ReviewersList.vue
frontend/src/pages/issues/: IssueEventsPage.vue  IssueHistoryPage.vue
frontend/src/pages/pr/: PrHistoryPage.vue  PrStateOverTimePage.vue  PrStatusPage.vue  PrWaitingPage.vue  TeamFilesPage.vue  TopFilesPage.vue
frontend/src/router/: index.js
frontend/src/services/: prApi.ts
frontend/src/stores/: index.js  reviewers.ts  sidebar.js  sidebar_template.js.bak
frontend/src/utils/: dateFormat.ts
migrations/: 01_sqlite_create.sql  20250312122823_init.sql  20250323151108_init.sql  20250323151110_add_indexes.sql
misc/: notes.md  selects.sql
src/: app.rs  commands.rs  config.rs  database_connector.rs  git.rs  github.rs  lib.rs  main.rs  model.rs
src/api/: app_state.rs  mod.rs  review.rs  webhooks.rs
src/db/: mod.rs
src/db/model/: mod.rs  pr_event.rs  team_member.rs  user.rs
src/git/: git.rs  github.rs  mod.rs
src/monitoring/: mod.rs  state_tracker.rs
