[package]
name = "Ranal"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.42.1"
git2 = "0.20.0"
trustfall = "0.8.0"

serde = "1.0.217"
serde_json = "1.0.135"
toml = "0.8.19"

tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.5.0"

secrecy = "0.10.3"