[package]
name = "ranal"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.44.0"
git2 = "0.20.0"
#trustfall = "0.8.0"  #query engine for all kind of data sources
rust_team_data = { git = "https://github.com/rust-lang/team" }

sqlx = { version = "0.8.3", features = ["sqlite", "postgres", "runtime-tokio-native-tls", "macros", "migrate", "chrono"] }

serde = "1.0.217"
#serde_json = "1.0.135"

tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
#tokio-macros = "2.5.0"

reqwest = { version = "0.12.15", features = ["json"] }
clap = { version = "4.5.37", features = ["derive"] }

secrecy = "0.10.3"  # secret codes and so on management (required by octocrab)
anyhow = "1.0.95"   # error handling
chrono = "0.4.39"   # date and time
dotenvy = "0.15.7"

# logging
log = { version = "0.4.25", features = ["kv", "kv_serde", "kv_std", ] }
env_logger = "0.11.7"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3" # logging and progress bar via indicatif
lazy_static = "1.5.0" # hack for progress bars