[package]
name = "ranal"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.47.0"
git2 = "0.20.2"
axum = { version = "0.8.7", features = ["macros"] }
aide = { version = "0.15.1", features = ["axum", "axum-json", "axum-query", "redoc", "swagger", "scalar", "macros"] } # automatic api documentation generation
tower-http = { version = "0.6.6", features = ["cors"] }

#trustfall = "0.8.0"  #query engine for all kind of data sources
rust_team_data = { git = "https://github.com/rust-lang/team" }

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate", "chrono"] }

serde = { version = "1.0.228" }
serde_json = "1.0.143"
schemars = { version = "0.9.0", features = ["derive", "chrono04", "std"] } # version required by aide

tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
#tokio-macros = "2.5.0"

reqwest = { version = "0.12.24", features = ["json"] }
clap = { version = "4.5.52", features = ["derive"] }

secrecy = "0.10.3"  # secret codes and so on management (required by octocrab)
anyhow = "1.0.100"   # error handling
chrono = "0.4.42"   # date and time
dotenvy = "0.15.7"

# logging
log = { version = "0.4.25", features = ["kv", "kv_serde", "kv_std", ] }
env_logger = "0.11.7"
indicatif = "0.17.11" # stuck on this version since indicatif-log-bridge isnt updated yet
indicatif-log-bridge = "0.2.3" # logging and progress bar via indicatif
lazy_static = "1.5.0" # hack for progress bars